--- a/Examples/ex3.html
+++ b/Examples/ex3.html
@@ -19,7 +19,7 @@
       return 'hello ' + name;
     }
     console.log(hello('bob'));
-    
+
     hi = 4;
     console.log(hi) // теперь имя 'hi' указывает на число
     hi() // поскольку hi больше не является функцией,
@@ -38,7 +38,7 @@
 
     // более продвинутый пример
     function say(text, method) {
-      method(say);
+      method(text);
     }
     say('hi alert', alert);
     say('hi console', console.log);
