--- a/Accounting/index.html
+++ b/Accounting/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Accounting</title>
     <meta charset="utf-8">
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     Accounting
@@ -26,6 +26,6 @@
      </tbody>
     </table>
   </body>
-  <script src = "table.js"></script>
+  <script src = "accounting.js"></script>
   <script src = "test.js"></script>
 </html>
